--- a/index.html
+++ b/index.html
@@ -3,51 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Valentine?</title>
+    <title>For Kuhu ❤️</title>
     <style>
-        body { height: 100vh; display: flex; justify-content: center; align-items: center; background: #ffe6eb; font-family: Arial, sans-serif; overflow: hidden; margin: 0; touch-action: manipulation; }
-        .box { text-align: center; padding: 20px; }
-        h1 { color: #e6005c; font-size: 1.8rem; }
-        button { padding: 15px 25px; font-size: 1.2rem; margin: 10px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; }
-        #yes { background-color: #ff4d79; color: white; position: relative; z-index: 10; }
-        #no { background-color: #999; color: white; position: absolute; transition: 0.1s; }
-        #gif { display: none; margin-top: 20px; }
-        img { width: 100%; max-width: 250px; border-radius: 10px; }
+        body { height: 100vh; display: flex; justify-content: center; align-items: center; background: #ffe6eb; font-family: 'Arial', sans-serif; overflow: hidden; margin: 0; touch-action: manipulation; }
+        .box { text-align: center; padding: 30px; background: white; border-radius: 25px; box-shadow: 0 10px 30px rgba(230, 0, 92, 0.15); border: 2px solid #ffccd5; margin: 20px; max-width: 320px; }
+        h1 { color: #e6005c; font-size: 1.6rem; margin-bottom: 25px; line-height: 1.3; }
+        button { padding: 15px 30px; font-size: 1.2rem; margin: 10px; border: none; border-radius: 50px; cursor: pointer; font-weight: bold; transition: 0.3s; }
+        #yes { background-color: #ff4d79; color: white; box-shadow: 0 4px 10px rgba(255, 77, 121, 0.3); position: relative; z-index: 10; }
+        #no { background-color: #f0f0f0; color: #888; position: absolute; transition: 0.1s; z-index: 5; }
+        #success-content { display: none; }
+        img { width: 100%; border-radius: 15px; margin-top: 15px; min-height: 200px; background: #eee; }
+        .footer { font-size: 0.8rem; color: #ccabb2; margin-top: 15px; }
     </style>
 </head>
 <body>
     <div class="box">
-        <div id="content">
-            <h1>Will you be my Valentine? ❤️</h1>
-            <button id="yes">Yes</button>
+        <div id="main-content">
+            <h1>Will you be my Valentine, Kuhu? ❤️</h1>
+            <button id="yes">Yes!</button>
             <button id="no">No</button>
         </div>
-        <div id="gif">
-            <h2>You had no choice 😂💖</h2>
-            <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" alt="Funny Gif">
+
+        <div id="success-content">
+            <h1>I knew it! 🥰</h1>
+            <p>Sagar mein doobna hi tha 😉✨</p>
+            <img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3YyZzh4ZnA1Z3ZqZnB4Z3ZqZnB4Z3ZqZnB4Z3ZqZnB4Z3ZqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/DS7jbVr1nJ5AyBv5VA/giphy.webp" alt="SRK Romance">
+            <div class="footer">Handcrafted by Sagar</div>
         </div>
     </div>
-    <script>
-        const noButton = document.getElementById("no");
-        const yesButton = document.getElementById("yes");
-        const gifDiv = document.getElementById("gif");
-        const content = document.getElementById("content");
 
-        const moveButton = (e) => {
+    <script>
+        const noBtn = document.getElementById("no");
+        const yesBtn = document.getElementById("yes");
+        const main = document.getElementById("main-content");
+        const success = document.getElementById("success-content");
+
+        const move = (e) => {
             if (e) e.preventDefault();
-            const x = Math.random() * (window.innerWidth - noButton.offsetWidth);
-            const y = Math.random() * (window.innerHeight - noButton.offsetHeight);
-            noButton.style.left = x + "px";
-            noButton.style.top = y + "px";
+            const x = Math.random() * (window.innerWidth - noBtn.offsetWidth - 40);
+            const y = Math.random() * (window.innerHeight - noBtn.offsetHeight - 40);
+            noBtn.style.left = Math.max(20, x) + "px";
+            noBtn.style.top = Math.max(20, y) + "px";
         };
 
-        noButton.addEventListener("mouseover", moveButton);
-        noButton.addEventListener("touchstart", moveButton);
+        noBtn.addEventListener("touchstart", move);
+        noBtn.addEventListener("mouseover", move);
 
-        yesButton.addEventListener("click", () => {
-            content.style.display = "none";
-            gifDiv.style.display = "block";
-            document.body.style.backgroundColor = "#ffccd5";
+        yesBtn.addEventListener("click", () => {
+            main.style.display = "none";
+            success.style.display = "block";
+            document.body.style.background = "#ffccd5";
         });
     </script>
 </body>
