--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         #yes { background-color: #ff4d79; color: white; position: relative; z-index: 10; }
         #no { background-color: #999; color: white; position: absolute; transition: 0.1s; }
         #gif { display: none; margin-top: 20px; }
-        /* Added display block and margin auto to ensure GIF shows */
-        img { display: block; margin: 10px auto; width: 100%; max-width: 280px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
-        h2 { color: #ff4d79; font-size: 1.3rem; margin-top: 0; }
+        img { width: 100%; max-width: 250px; border-radius: 10px; }
+        h2 { color: #ff4d79; font-size: 1.3rem; }
         p { color: #444; font-weight: bold; }
     </style>
 </head>
 <body>
     <div class="box">
         <div id="content">
+            <img src="https://media.giphy.com/media/yYQcJwvuNaUTe/giphy.gif" alt="First Gif" style="margin-bottom: 10px;">
             <h1>14th feb ko extra classes chalogi? ❤️</h1>
             <button id="yes">Yes</button>
             <button id="no">No</button>
@@ -28,7 +28,7 @@
         <div id="gif">
             <h2>Yess i knew it 🥹</h2>
             <p>I'll book reservation at lal channa bhandar 🤭</p>
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3YyZzh4ZnA1Z3ZqZnB4Z3ZqZnB4Z3ZqZnB4Z3ZqZnB4Z3ZqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/DS7jbVr1nJ5AyBv5VA/giphy.gif" alt="SRK Romance">
+            <img src="https://media.giphy.com/media/h2iLgurYVLwWs/giphy.gif" alt="SRK Kajol">
         </div>
     </div>
     <script>
