--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <button id="no">No</button>
         </div>
         <div id="gif">
-            <h2>Yess i knew it 🥹</h2>
-            <p>I'll book reservation at lal channa bhandar 🤭</p>
+            <h2>Yess i knew it 🥹💖</h2>
+            <p>I'll book a reservation at lal channa bhandar🤭</p>
             <img src="https://media.giphy.com/media/h2iLgurYVLwWs/giphy.gif" alt="SRK Kajol">
         </div>
     </div>
