--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="box">
         <div id="content">
             <img src="https://media.giphy.com/media/yYQcJwvuNaUTe/giphy.gif" alt="First Gif" style="margin-bottom: 10px;">
-            <h1>14th feb ko extra classes chalogi? 🤪</h1>
+            <h1>Hey Kuhu 💫</h1>14th feb ko extra classes chalogi? 🙈</h1>
             <button id="yes">Yes</button>
             <button id="no">No</button>
         </div>
