--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="content">
             <img src="https://media.giphy.com/media/yYQcJwvuNaUTe/giphy.gif" alt="First Gif" style="margin-bottom: 10px;">
             <h1>Hey Kuhu 💫</h1>
-            </p>14th feb ko extra classes chalogi? 🙈</p>
+            <p>14th feb ko extra classes chalogi? 🙈</p>
             <button id="yes">Yes</button>
             <button id="no">No</button>
         </div>
